tests/errors/compiler/no_leftbr_in_stand_func/exp.c
void main()
{
	exp 1);
}
